Added favicon (+ application icons + manifest icons) Pages Added: /about /features /pricing /about Application renamed to: First Fleet Management
Others: Added Service worker

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,9 @@
 <%- include('./templates/navbar') %>
 <div class="container">
     <div class="jumbotron">
-        <h1 class="display-3">Black Sea Fleet Management</h1>
-        <p>We provide the latest and greatest fleet management solutions to date. Offering a completely custom but
+        <h2>First Fleet Management</h2>
+        <p class="overflowFix">We provide the latest and greatest fleet management solutions to date. Offering a
+            completely custom but
             feature rich dashboard you can easily manage your whole fleet, or just a sub section. view the demo or head
             to the features page to find out more.</p>
         <p><a class="btn btn-primary btn-lg" href="/features">Features</a></p>
