--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -2,10 +2,16 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
-<script>
-    // Let's register our serviceworker
-    navigator.serviceWorker.register('sw.js', {
-        // The scope cannot be parent to the script url
-        scope: './'
-    });
-</script>
+<script defer src="/assets/js/font-awesome/brands.min.js"></script>
+<script defer src="/assets/js/font-awesome/light.min.js"></script>
+<script defer src="/assets/js/font-awesome/regular.min.js"></script>
+<script defer src="/assets/js/font-awesome/solid.min.js"></script>
+<script defer src="assets/js/font-awesome/fontawesome.min.js"></script>
+
+<!--<script> TODO, ACTIVATE THIS IN PROD-->
+<!--// Let's register our serviceworker-->
+<!--navigator.serviceWorker.register('sw.js', {-->
+<!--// The scope cannot be parent to the script url-->
+<!--scope: './'-->
+<!--});-->
+<!--</script>-->
