Added favicon (+ application icons + manifest icons) Added some basic webpack for JS bundling Added some security/performance tweaks for express Fixed Serviceworker + native app stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,15 +5,129 @@
 </head>
 <body>
 <%- include('./templates/navbar') %>
-<div class="container">
-    <div class="jumbotron">
-        <h2>First Fleet Management</h2>
-        <p class="overflowFix">We provide the latest and greatest fleet management solutions to date. Offering a
-            completely custom but
-            feature rich dashboard you can easily manage your whole fleet, or just a sub section. view the demo or head
-            to the features page to find out more.</p>
-        <p><a class="btn btn-primary btn-lg" href="/features">Features</a></p>
-    </div>
+
+<!--Wrapper-->
+<div class="wrapper" id="wrapper">
+    <!--Header Section-->
+    <header>
+
+    </header>
+
+    <!--About Us Section-->
+    <section class="about" id="about">
+        <div class="container">
+            <h1>About</h1>
+            <div class="jumbotron">
+                <h2>First Fleet Management</h2>
+                <p class="overflowFix">We provide the latest and greatest fleet management solutions to date.
+                    Offering a
+                    completely custom but
+                    feature rich dashboard you can easily manage your whole fleet, or just a sub section. view the
+                    demo
+                    or head
+                    to the features section to find out more.</p>
+            </div>
+        </div>
+    </section>
+
+    <!--Features Section-->
+    <section class="features" id="features">
+        <div class="container">
+            <h1>Features</h1>
+            <div class="row" style="text-align: center;">
+                <div class="col-md-4">
+                    <i style="width: 105px;" class="fas fa-car fa-5x fa-fw fa-border square"></i>
+                    <br><br>
+                    <h5>Simple Vehicle Tracking</h5>
+                    <br>
+                    <p>With out custom dashboard for monitoring your vehicles, you'll know your way around in no
+                        time and be a pro in minutes!</p>
+                </div>
+                <br>
+                <div class="col-md-4">
+                    <i style="width: 105px;" class="fas fa-lock fa-5x fa-fw fa-border"></i>
+                    <br><br>
+                    <h5>Security Measures</h5>
+                    <br>
+                    <p>With the latest and greatest in security practices in place, rest assured no one but you and
+                        your staff
+                        will be able to see your vehicles!</p>
+                </div>
+                <br>
+                <div class="col-md-4">
+                    <i style="width: 105px;" class="fas fa-arrows-h fa-5x fa-fw fa-border"></i>
+                    <br><br>
+                    <h5>Dynamic</h5>
+                    <br>
+                    <p>With our plans you are billed on features not vehicles, track 1 or tho thousands vehicles for
+                        the same price!</p>
+                </div>
+                <br>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="row" style="text-align: center;">
+                <div class="col-md-4">
+                    <i style="width: 105px;" class="fas fa-XXX fa-5x fa-fw fa-border"></i>
+                    <br><br>
+                    <h5>Feature 4</h5>
+                    <br>
+                    <p>XXX</p>
+                </div>
+                <br>
+                <div class="col-md-4">
+                    <i style="width: 105px;" class="fas fa-XXX fa-5x fa-fw fa-border"></i>
+                    <br><br>
+                    <h5>Feature 5</h5>
+                    <br>
+                    <p>XXX</p>
+                </div>
+                <br>
+                <div class="col-md-4">
+                    <i style="width: 105px;" class="fas fa-XXX fa-5x fa-fw fa-border"></i>
+                    <br><br>
+                    <h5>Feature 6</h5>
+                    <br>
+                    <p>XXX</p>
+                    <br>
+                </div>
+            </div>
+    </section>
+    <!--Pricing Section-->
+    <section class="pricing" id="pricing">
+        <div class="container">
+            <h1>Pricing</h1>
+        </div>
+    </section>
+    <!--Demo Section-->
+    <section class="demo" id="demo">
+        <div class="container">
+            <h1>Demo</h1>
+        </div>
+    </section>
+    <!--Contact Us Section-->
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Contact Us</h1>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 </div>
 
