--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,17 +1,11 @@
-<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/popper.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script defer src="/assets/js/font-awesome/brands.min.js"></script>
-<script defer src="/assets/js/font-awesome/light.min.js"></script>
-<script defer src="/assets/js/font-awesome/regular.min.js"></script>
-<script defer src="/assets/js/font-awesome/solid.min.js"></script>
-<script defer src="assets/js/font-awesome/fontawesome.min.js"></script>
+<link rel="stylesheet" href="/assets/css/bootstrap.min.css" media="none" onload="this.media='all';">
+<link rel="stylesheet" href="/assets/css/main.css" media="none" onload="this.media='all';">
+<script defer src="/assets/js/dist/bundle.js"></script>
 
-<!--<script> TODO, ACTIVATE THIS IN PROD-->
-<!--// Let's register our serviceworker-->
-<!--navigator.serviceWorker.register('sw.js', {-->
-<!--// The scope cannot be parent to the script url-->
-<!--scope: './'-->
-<!--});-->
-<!--</script>-->
+<script>
+    // Let's register our serviceworker
+    navigator.serviceWorker.register('sw.js', {
+// The scope cannot be parent to the script url
+        scope: './'
+    });
+</script>
