--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -1,7 +1,9 @@
+<meta name="author" content="Jacob Gee-Clarke">
 <meta charset="UTF-8">
 <meta name="viewport"
       content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 <link rel="manifest" href="assets/other/manifest.json">
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
