Fixed missing close tag and some styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,6 +93,7 @@
                     <br>
                 </div>
             </div>
+        </div>
     </section>
     <!--Pricing Section-->
     <section class="pricing" id="pricing">
