--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,16 +1,9 @@
-<script src="/assets/js/jquery/jquery.slim.min.js"></script>
+<script src="/assets/js/jquery/jquery.min.js"></script>
 <script src="/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="assets/js/font-awesome/fontawesome.min.js"></script>
 <script src="assets/js/font-awesome/brands.min.js"></script>
 <script src="assets/js/font-awesome/light.min.js"></script>
 <script src="assets/js/font-awesome/regular.min.js"></script>
 <script src="assets/js/font-awesome/solid.min.js"></script>
-
-<% if(env != 'development'){%>
-<script>
-    navigator.serviceWorker.register('sw.js', {
-        scope: './'
-    });
-</script>
-<%}%>
-
+<%- include('../js/loginAjax') %>
+<%- include('../js/serviceWorker') %>
