--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -9,16 +9,12 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="/dashboard">Dashboard</a>
             </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Login</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#signupModal">Sign up</a>
             </li>
         </ul>
@@ -30,6 +26,7 @@
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="Login Modal" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
+            <div id='loginError'></div>
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Login</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -54,7 +51,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Login</button>
+                <button type="button" id="loginButton" class="btn btn-primary">Login</button>
             </div>
         </div>
     </div>
@@ -64,6 +61,7 @@
 <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="Signup Modal" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
+            <div id='registrationError'></div>
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Signup</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -74,7 +72,8 @@
                 <form id="signupForm">
                     <div class="form-group">
                         <label for="email">Email address</label>
-                        <input required type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                        <input required type="email" class="form-control" id="registrationEmail"
+                               aria-describedby="emailHelp"
                                placeholder="Enter email">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                             else.
@@ -82,17 +81,21 @@
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input required type="password" class="form-control" id="password" placeholder="Password">
+                        <input required type="password" class="form-control" id="registrationPassword"
+                               placeholder="Password">
                     </div>
                     <div class="form-group">
                         <label for="password">Confirm Password</label>
-                        <input required type="password" class="form-control" id="password" placeholder="Password">
+                        <input required type="password" class="form-control" id="passwordConfirmation"
+                               placeholder="Password">
+                    </div>
+                    <div class="form-group">
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Login</button>
+                <button type="button" id="signupButton" class="btn btn-primary">Login</button>
             </div>
         </div>
     </div>
