--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,9 +1,10 @@
 <script src="/assets/js/jquery/jquery.min.js"></script>
-<script src="/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
-<script src="assets/js/font-awesome/fontawesome.min.js"></script>
-<script src="assets/js/font-awesome/brands.min.js"></script>
-<script src="assets/js/font-awesome/light.min.js"></script>
-<script src="assets/js/font-awesome/regular.min.js"></script>
-<script src="assets/js/font-awesome/solid.min.js"></script>
-<%- include('../js/loginAjax') %>
+<script async src="/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+<script async src="assets/js/font-awesome/fontawesome.min.js"></script>
+<script async src="assets/js/font-awesome/brands.min.js"></script>
+<script async src="assets/js/font-awesome/light.min.js"></script>
+<script async src="assets/js/font-awesome/regular.min.js"></script>
+<script async src="assets/js/font-awesome/solid.min.js"></script>
+<script async defer src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"></script>
+<%- include('../js/authAjax') %>
 <%- include('../js/serviceWorker') %>
