--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -19,3 +19,16 @@
 <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
 <meta name="theme-color" content="#f7f7f9">
 <title><%= title %></title>
+
+<script type="text/javascript">
+    let widgetId1;
+    let widgetId2;
+    let onloadCallback = function () {
+        widgetId1 = grecaptcha.render('recaptcha1', {
+            'sitekey': '6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI'
+        });
+        widgetId2 = grecaptcha.render('recaptcha2', {
+            'sitekey': '6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI'
+        });
+    };
+</script>
